metadata/force-app/main/default/objects/CustomName_JauuH__c/CustomName_JauuH__c.object-meta.xml
<CustomObject>
    <description>Description_sANZq</description>
    <label>CustomLabel_othrf</label>
    <nameField>
        <label>CustomLabel_othrf</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_othrfs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>