metadata/force-app/main/default/objects/CustomName_JauuH__c/fields/CustomField_uKofb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_uKofb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldPrXVd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>